// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ExpensesSummary with 1 expenses 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
     £2.35
  </h3>
</div>
`;

exports[`should render correctly ExpensesSummary with many expenses 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totalling 
     £235,123,409.87
  </h3>
</div>
`;
